Added folders with initial files

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
     <section id="princess">
         <h1>Front-End Devloper and Designer</h1>
         <p>Turning ideas into interactive web experiences</p>
-        <img src="prince.avif">
+        <img id="me" src="images/me.jpg">
 
 
     </section>
